exports[`test MultiInput with 4 default rows 1`] = `
<div>
  <div>
    <label>
      1
    </label>
    <input
      defaultValue=""
      id="nodejs0"
      name="nodejs0"
      onChange={[Function]}
      type="text" />
  </div>
  <div>
    <label>
      2
    </label>
    <input
      defaultValue=""
      id="nodejs1"
      name="nodejs1"
      onChange={[Function]}
      type="text" />
    <a
      href="#"
      onClick={[Function]}>
      remove
    </a>
  </div>
  <div>
    <label>
      3
    </label>
    <input
      defaultValue=""
      id="nodejs2"
      name="nodejs2"
      onChange={[Function]}
      type="text" />
    <a
      href="#"
      onClick={[Function]}>
      remove
    </a>
  </div>
  <div>
    <label>
      4
    </label>
    <input
      defaultValue=""
      id="nodejs3"
      name="nodejs3"
      onChange={[Function]}
      type="text" />
    <a
      href="#"
      onClick={[Function]}>
      remove
    </a>
  </div>
  <a
    href="#"
    onClick={[Function]}>
    Add another row
  </a>
</div>
`;

exports[`test MultiInput with 4 rows 1`] = `
<div>
  <div>
    <label>
      1
    </label>
    <input
      defaultValue="One"
      id="nodejs0"
      name="nodejs0"
      onChange={[Function]}
      type="text" />
  </div>
  <div>
    <label>
      2
    </label>
    <input
      defaultValue="Two"
      id="nodejs1"
      name="nodejs1"
      onChange={[Function]}
      type="text" />
    <a
      href="#"
      onClick={[Function]}>
      remove
    </a>
  </div>
  <div>
    <label>
      3
    </label>
    <input
      defaultValue="Three"
      id="nodejs2"
      name="nodejs2"
      onChange={[Function]}
      type="text" />
    <a
      href="#"
      onClick={[Function]}>
      remove
    </a>
  </div>
  <div>
    <label>
      4
    </label>
    <input
      defaultValue="Four"
      id="nodejs3"
      name="nodejs3"
      onChange={[Function]}
      type="text" />
    <a
      href="#"
      onClick={[Function]}>
      remove
    </a>
  </div>
  <a
    href="#"
    onClick={[Function]}>
    Add another row
  </a>
</div>
`;

exports[`test MultiInput with no props 1`] = `
<div>
  <div>
    <label>
      1
    </label>
    <input
      defaultValue=""
      id="nodejs0"
      name="nodejs0"
      onChange={[Function]}
      type="text" />
  </div>
  <a
    href="#"
    onClick={[Function]}>
    Add another row
  </a>
</div>
`;
